rvpadman@gmail.com/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>NPSP_Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Amount_Outstanding__c</fullName>
        <description>Formula: The Amount of this Opportunity minus the Payment Writeoff Amount and Payment Amount Received.</description>
        <formula>Amount - NULLVALUE(npe01__Payments_Made__c, 0) - NULLVALUE(npe01__Amount_Written_Off__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: The Amount of this Opportunity minus the Payment Writeoff Amount and Payment Amount Received.</inlineHelpText>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Amount_Written_Off__c</fullName>
        <description>Total value of the Payments marked as written-off or noncollectable for this Opportunity.</description>
        <inlineHelpText>Total value of the Payments marked as written-off or noncollectable for this Opportunity.</inlineHelpText>
        <label>Payment Writeoff Amount</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Written_Off__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Contact_Id_for_Role__c</fullName>
        <description>System field updated automatically.  Do not use.</description>
        <inlineHelpText>Hidden field for passing a Contact Id for Contact Role creation.</inlineHelpText>
        <label>Contact Id for Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Do_Not_Automatically_Create_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If payments are active, and if this is checked, a new payment will not be automatically created for this Opportunity.</description>
        <inlineHelpText>If payments are active, and if checked, a new payment will not be automatically created for this Opportunity.</inlineHelpText>
        <label>Do Not Automatically Create Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Is_Opp_From_Individual__c</fullName>
        <description>Formula: Whether or not the related Account is defined as an individual (SYSTEMIsIndividual__c)</description>
        <formula>IF( Account.npe01__SYSTEMIsIndividual__c, &apos;true&apos;, &apos;false&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Whether or not the related Account is defined as an individual (SYSTEMIsIndividual__c)</inlineHelpText>
        <label>Is Opp From Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Member_Level__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Determines the value on the Contact or Account of the Last Membership Level field.</inlineHelpText>
        <label>Member Level</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_End_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date membership period ends.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_Origin__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Is this a renewal, a new membership, or a membership with someone who lapsed and has returned.</inlineHelpText>
        <label>Membership Origin</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reacquire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_Start_Date__c</fullName>
        <description>Used for Membership Opportunities (Record Type)</description>
        <inlineHelpText>Date when membership period starts</inlineHelpText>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Number_of_Payments__c</fullName>
        <description>Calculated based on the Payment object.</description>
        <inlineHelpText>Total number of payments for this Opportunity (Donation)</inlineHelpText>
        <label>Number of Payments</label>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__Payments_Made__c</fullName>
        <description>The total value of Payments marked as paid for this Opportunity.</description>
        <inlineHelpText>The total value of Payments marked as paid for this Opportunity.</inlineHelpText>
        <label>Payment Amount Received</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__CombinedRollupFieldset__c</fullName>
        <description>Concatenated fields used during rollups to locate the most recent opportunity.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount) + &apos;;|;&apos;+ TEXT(npe01__Member_Level__c) + &apos;;|;&apos;+ TEXT(npe01__Membership_Origin__c) + &apos;;|;&apos; +  Id</formula>
        <inlineHelpText>Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__systemHouseholdContactRoleProcessor__c</fullName>
        <inlineHelpText>Controls if Household contact roles are created for Opportunities.  DEPRECATED.  Replaced by custom settings.</inlineHelpText>
        <label>_SYSTEM: HOUSEHOLD CONTACT ROLEPROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Opportunities</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Date__c</fullName>
        <description>Used to track date opportunity was acknowledged</description>
        <inlineHelpText>Date of acknowledgment</inlineHelpText>
        <label>Acknowledgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Acknowledgment_Status__c</fullName>
        <description>Status of Acknowledgment of this gift.</description>
        <inlineHelpText>Status of Acknowledgment of this gift.</inlineHelpText>
        <label>Acknowledgment Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Acknowledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Contract_Date__c</fullName>
        <description>The date of the grant&apos;s inception, according to the document or contract sent by the grant-making organization.</description>
        <inlineHelpText>The date of the grant&apos;s inception, according to the document or contract sent by the grant-making organization.</inlineHelpText>
        <label>Grant Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Contract_Number__c</fullName>
        <description>Tracks unique numbers sometimes assigned by grant-making organizations.</description>
        <inlineHelpText>Tracks unique numbers sometimes assigned by grant-making organizations.</inlineHelpText>
        <label>Grant Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Period_End_Date__c</fullName>
        <description>The date on which the period of the grant ends.</description>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Period_Start_Date__c</fullName>
        <description>The date on which the period of the grant begins.</description>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Program_Area_s__c</fullName>
        <description>Describes the funding areas for the grant. You can enter anything you want here. For example, you could enter the name of the program the grant applies to.</description>
        <inlineHelpText>Describes the funding areas for the grant. You can enter anything you want here. For example, you could enter the name of the program the grant applies to.</inlineHelpText>
        <label>Grant Program Area(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Requirements_Website__c</fullName>
        <description>A URL that points to the grant requirements on the grant-maker&apos;s website.</description>
        <inlineHelpText>A URL that points to the grant requirements on the grant-maker&apos;s website.</inlineHelpText>
        <label>Grant Requirements Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npsp__Is_Grant_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, indicates that the grant is a renewal of a previous grant.</description>
        <inlineHelpText>If selected, indicates that the grant is a renewal of a previous grant.</inlineHelpText>
        <label>Is Grant Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Next_Grant_Deadline_Due_Date__c</fullName>
        <description>The NPSP updates this field automatically based on the next Grant Deadline record.</description>
        <inlineHelpText>The NPSP updates this field automatically based on the next Grant Deadline record.</inlineHelpText>
        <label>Next Grant Deadline Due Date</label>
        <summarizedField>npsp__Grant_Deadline__c.npsp__Grant_Deadline_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>npsp__Grant_Deadline__c.npsp__Grant_Deadline_Due_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>npsp__Grant_Deadline__c.npsp__Grant_Deliverable_Close_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>npsp__Grant_Deadline__c.npsp__Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npsp__Previous_Grant_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this grant is a renewal of a previous grant, use this field to relate this record to the previous one.</description>
        <inlineHelpText>If this grant is a renewal of a previous grant, use this field to relate this record to the previous one.</inlineHelpText>
        <label>Previous Grant Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Grant Opportunities</relationshipLabel>
        <relationshipName>Previous_Grant_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact for this opportunity. The primary contact role is kept in sync with this field. For individual donations, this denotes attribution for this opportunity.</description>
        <inlineHelpText>The primary contact for this opportunity. The primary contact role is kept in sync with this field. For individual donations, this denotes attribution for this opportunity.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Name__c</fullName>
        <description>Installment name for inclusion in Opportunity Naming. Shows the installment number in parenthesis for open ended recurring donations, or the installment number out of the total for recurring donations with a set number of installments.</description>
        <formula>IF(
ISBLANK(npe03__Recurring_Donation__c),
&apos;&apos;,
  IF(
    OR(ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Open&apos;),ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Closed&apos;),ISBLANK(npe03__Recurring_Donation__r.npe03__Installments__c)),
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos;)&apos;,
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos; &apos;&amp;$Label.npsp__oppInstallmentsOf&amp;&apos; &apos;&amp;TEXT(npe03__Recurring_Donation__r.npe03__Installments__c)&amp;&apos;)&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installment name for inclusion in Opportunity Naming. Shows the installment number in parenthesis for open ended recurring donations, or the installment number out of the total for recurring donations with a set number of installments.</inlineHelpText>
        <label>Recurring Donation Installment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Number__c</fullName>
        <description>The installment number of this opportunity&apos;s recurring donation schedule.</description>
        <inlineHelpText>The installment number of this opportunity&apos;s recurring donation schedule.</inlineHelpText>
        <label>Recurring Donation Installment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Requested_Amount__c</fullName>
        <description>The amount you are requesting. This number might be different from the final award amount.</description>
        <inlineHelpText>The amount you are requesting. This number might be different from the final award amount.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>npsp__To_Be_Acknowledged</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>npsp__Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>npsp__Acknowledgment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Acknowledgment_Status__c</field>
            <operation>equals</operation>
            <value>To Be Acknowledged,Email Acknowledgment Not Sent</value>
        </filters>
        <label>To Be Acknowledged</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>NPSP_Default</fullName>
        <active>true</active>
        <businessProcess>NPSP_Default</businessProcess>
        <label>NPSP Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>